Did some work on notifications, working log system (still missing some things)